--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <a href="
         https://github.com/Jaaziel234" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/elarte.interior/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCbg-I-sbjHxg9MXvk8YCIcQ" class="youtube"><i class="bx bxl-youtube"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>CodigoZoom</span></strong>. Todos los Derechos Reservados
