--- a/index.html
+++ b/index.html
@@ -338,6 +338,8 @@
       <p>
         <label>Message: <textarea name="message"></textarea></label>
       </p>
+
+      <div data-netlify-recaptcha="true"></div>
       
       <p>
         <button type="submit">Send</button>
@@ -406,7 +408,7 @@
           </div>
 
           <div data-netlify-recaptcha="true"></div>
-          
+
           <div class="button mt-3">
             <button class="btn btn-primary" type="submit">Enviar</button>
           </div>          
