--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre mí</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Estudios</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacto</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-download"></i> <span>Descargar CV</span></a></li>
+        <li><a href="#hero" class="nav-link scrollto"><i class="bx bx-download"></i> <span>Descargar CV</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -80,7 +80,7 @@
       </div>
 
       <div class="buttonrt mt-4">
-        <a type="button" class="btn btn-primary" href="./assets/pdf/CVpersonal.pdf" download="CVpersonalpdf">Descargar</a>
+        <a type="button" class="btn btn-primary" href="./assets/pdf/CVpersonal.pdf" download="CVpersonalpdf">Descargar CV</a>
         <h3 class="texto mt-3">CV actualizado: Junio 2022</h3>
       </div>
 
@@ -190,6 +190,7 @@
                 Complejo Educativo Profesor Alberto Varela, San Juan
                 Talpa, Depto. La Paz.</p>
             </div>
+
             <div class="resume-item">
               <h4>Educación Media:</h4>
               <h5>2016 - 2018</h5>
@@ -322,30 +323,7 @@
     </section><!-- Final Servicios Seccion-->
 
     <!-- ======= Seccion de contactos ======= -->
-    <form name="contact" method="POST" data-netlify="true">
-      <p>
-        <label>Your Name: <input type="text" name="name" /></label>
-      </p>
-      <p>
-        <label>Your Email: <input type="email" name="email" /></label>
-      </p>
-      <p>
-        <label>Your Role: <select name="role[]" multiple>
-          <option value="leader">Leader</option>
-          <option value="follower">Follower</option>
-        </select></label>
-      </p>
-      <p>
-        <label>Message: <textarea name="message"></textarea></label>
-      </p>
 
-      <div data-netlify-recaptcha="true"></div>
-      
-      <p>
-        <button type="submit">Send</button>
-      </p>
-    </form>
-  
  <!-- ======= Contact Section ======= -->
  <section id="contact" class="contact">
   <div class="container" data-aos="fade-up">
@@ -360,20 +338,20 @@
         <div class="info">
           <div class="address">
             <i class="bi bi-geo-alt"></i>
-            <h4>Location:</h4>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <h4>Departamento:</h4>
+            <p>La Paz</p>
           </div>
 
           <div class="email">
             <i class="bi bi-envelope"></i>
             <h4>Email:</h4>
-            <p>info@example.com</p>
+            <p>jaazielmc45@gmail.com</p>
           </div>
 
           <div class="phone">
             <i class="bi bi-phone"></i>
-            <h4>Call:</h4>
-            <p>+1 5589 55488 55s</p>
+            <h4>Celular:</h4>
+            <p>+50370848024</p>
           </div>
 
         </div>
@@ -413,18 +391,12 @@
             <button class="btn btn-primary" type="submit">Enviar</button>
           </div>          
         </form>
-        
-
-
       </div>
 
     </div>
 
   </div>
 </section><!-- End Contact Section -->
-
-
-
 
 <!-- 
    <section id="contact" class="contact">
