--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
 
       <div class="buttonrt mt-4">
-        <a type="button" class="btn btn-primary" href="./assets/pdf/CVpersonal.pdf" download="CVpersonalpdf">Descargar CV</a>
+        <a type="button" class="btn btn-primary" href="./assets/pdf/CV_JaazielMartinez.pdf" download="CVpersonalpdf">Descargar CV</a>
         <h3 class="texto mt-3">CV actualizado: Mayo 2023</h3>
       </div>
 
